--- a/Styles.css
+++ b/Styles.css
@@ -33,9 +33,14 @@
     color: #61dafb;
   }
   
-  body{
-    font-family: 'Roboto', sans-serif;
-    
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
   }
   
   
