--- a/Styles.css
+++ b/Styles.css
@@ -568,3 +568,47 @@ a {
 .member .Contact a {
   color: rgb(66, 66, 66);
 }
+
+/* Footer */
+
+.page-footer .container .responsive-form {
+  margin: auto;
+  padding: 0px 10px;
+}
+
+.responsive-form input {
+  position: relative;
+  bottom: 20px;
+  color: white;
+}
+
+.responsive-form input:focus {
+  border-bottom: none;
+  box-shadow: none;
+}
+
+.responsive-form textarea {
+  position: relative;
+  bottom: 20px;
+  color: white;
+}
+
+.responsive-form input[type='submit'] {
+  width: 100%;
+}
+
+.social-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* padding: 20px; */
+}
+
+.social-container i {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.social-container a {
+  color: white;
+}
